Animate bug && developer

--- a/src/animation.html
+++ b/src/animation.html
@@ -17,7 +17,13 @@ aaa
                 <img class="bgImg" id="bg1" src="img/background.png" />
                 <img class="bgImg" id="bg2" src="img/background.png" />
             </div>
-            <div id="animation"> 
+            <div id="bug"> 
+                <img class="img1" src="img/bug_1.png" />
+                <img class="img1" src="img/bug_2.png" />
+                <img class="img1" src="img/bug_3.png" />
+                <img class="img1" src="img/bug_4.png" />
+            </div>
+            <div id="developer"> 
                 <img class="img1" src="img/img_loading_frame1.png" />
                 <img class="img1" src="img/img_loading_frame2.png" />
                 <img class="img1" src="img/img_loading_frame3.png" />
@@ -34,7 +40,7 @@ aaa
                 <img class="img1" src="img/img_loading_frame14.png" />
                 <img class="img1" src="img/img_loading_frame15.png" />
                 <img class="img1" src="img/img_loading_frame16.png" />
-            </div> 
+            </div>
         </div>
     </body>
 </html>
