--- a/src/animation.html
+++ b/src/animation.html
@@ -24,22 +24,10 @@ aaa
                 <img class="img1" src="img/bug_4.png" />
             </div>
             <div id="developer"> 
-                <img class="img1" src="img/img_loading_frame1.png" />
-                <img class="img1" src="img/img_loading_frame2.png" />
-                <img class="img1" src="img/img_loading_frame3.png" />
-                <img class="img1" src="img/img_loading_frame4.png" />
-                <img class="img1" src="img/img_loading_frame5.png" />
-                <img class="img1" src="img/img_loading_frame6.png" />
-                <img class="img1" src="img/img_loading_frame7.png" />
-                <img class="img1" src="img/img_loading_frame8.png" />
-                <img class="img1" src="img/img_loading_frame9.png" />
-                <img class="img1" src="img/img_loading_frame10.png" />
-                <img class="img1" src="img/img_loading_frame11.png" />
-                <img class="img1" src="img/img_loading_frame12.png" />
-                <img class="img1" src="img/img_loading_frame13.png" />
-                <img class="img1" src="img/img_loading_frame14.png" />
-                <img class="img1" src="img/img_loading_frame15.png" />
-                <img class="img1" src="img/img_loading_frame16.png" />
+                <img class="img1" src="img/developer_1.png" />
+                <img class="img1" src="img/developer_2.png" />
+                <img class="img1" src="img/developer_3.png" />
+                <img class="img1" src="img/developer_4.png" />
             </div>
         </div>
     </body>
