--- a/src/animation.html
+++ b/src/animation.html
@@ -16,6 +16,8 @@ aaa
             <div id="bgArea">
                 <img class="bgImg" id="bg1" src="img/background.png" />
                 <img class="bgImg" id="bg2" src="img/background.png" />
+                <img class="bgImg" id="bg3" src="img/background.png" />
+                <img class="bgImg" id="bg4" src="img/background.png" />
             </div>
             <div id="bug"> 
                 <img class="img1" src="img/bug_1.png" />
