--- a/src/animation.html
+++ b/src/animation.html
@@ -31,6 +31,10 @@ aaa
                 <img class="img1" src="img/developer_3.png" />
                 <img class="img1" src="img/developer_4.png" />
             </div>
+            <div id="developer_infected">
+                <img class="img1" src="img/green_developer.png" />
+                <img class="img1" src="img/developer_1.png" />
+            </div>
         </div>
     </body>
 </html>
