--- a/src/animation.html
+++ b/src/animation.html
@@ -34,6 +34,10 @@ aaa
             <div id="developer_infected">
                 <img class="img1" src="img/green_developer.png" />
                 <img class="img1" src="img/developer_1.png" />
+                <img class="yg1" src="img/yageun_text.png" />
+                <img class="yg2" src="img/yageun_text.png" />
+                <img class="yg3" src="img/yageun_text.png" />
+                <img class="yg4" src="img/yageun_text.png" />
             </div>
         </div>
     </body>
