이미지 타이틀 및 팝업창 수정

--- a/src/popup.html
+++ b/src/popup.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <style>
-            BODY {width : 520px; min-height:250px;}
+            BODY {width : 150px; min-height:30px;}
         </style>
         <script src="popup.js"></script>
     </head>
     <body>
-        Hello World!
+        Run! Developer Run!
     </body>
 </html>
